--- a/k8s/eck/beat.yaml
+++ b/k8s/eck/beat.yaml
@@ -12,6 +12,10 @@ spec:
     - type: container
       paths:
       - /var/log/containers/*.log
+    - type: container
+      paths:
+      - /var/log/containers/demo-app-*.log
+      tags: ["demo-app"]
   daemonSet:
     podTemplate:
       spec:
