--- a/k8s/eck/beat.yaml
+++ b/k8s/eck/beat.yaml
@@ -7,27 +7,71 @@ spec:
   version: 8.16.1
   elasticsearchRef:
     name: quickstart
+  # 使用Autodiscover自动处理全部容器
+  # config:
+  #   filebeat.autodiscover:
+  #     providers:
+  #     - type: kubernetes
+  #       node: ${NODE_NAME}
+  #       hints.enabled: true
+  #       hints.default_config:
+  #         type: container
+  #         paths:
+  #         - /var/log/containers/*${data.kubernetes.container.id}.log
+  # Autodiscover的手动配置版（全局processors）
+  # config:
+  #   filebeat.inputs:
+  #   - type: container
+  #     paths:
+  #     - /var/log/containers/*.log
+  #   processors:
+  #   - add_kubernetes_metadata:
+  #      host: ${NODE_NAME}
+  #      matchers:
+  #      - logs_path:
+  #          logs_path: "/var/log/containers/"
+  # 针对部分日志进行定向抓取（私有processors）
+  # config:
+  #  filebeat.inputs:
+  #    - type: container
+  #      paths:
+  #      - /var/log/containers/demo-app-*.log
+  #      tags: ["demo-app"]
+  #      fields:
+  #        app_id: demo-app
+  #      fields_under_root: true
+  #      processors:
+  #      - add_kubernetes_metadata:
+  #         host: ${NODE_NAME}
+  #         matchers:
+  #         - logs_path:
+  #             logs_path: "/var/log/containers/"
   config:
-    filebeat.inputs:
-    - type: container
-      paths:
-      - /var/log/containers/*.log
-    - type: container
-      paths:
-      - /var/log/containers/demo-app-*.log
-      tags: ["demo-app"]
-      fields:
-        app_id: demo-app
-      fields_under_root: true
+    filebeat.autodiscover:
+      providers:
+      - type: kubernetes
+        node: ${NODE_NAME}
+        hints.enabled: true
+        hints.default_config:
+          type: container
+          paths:
+          - /var/log/containers/*${data.kubernetes.container.id}.log
   daemonSet:
     podTemplate:
       spec:
+        serviceAccount: elastic-beat-filebeat-quickstart
+        automountServiceAccountToken: true
         dnsPolicy: ClusterFirstWithHostNet
         hostNetwork: true
         securityContext:
           runAsUser: 0
         containers:
         - name: filebeat
+          env:
+          - name: NODE_NAME
+            valueFrom:
+              fieldRef:
+                fieldPath: spec.nodeName
           volumeMounts:
           - name: varlogcontainers
             mountPath: /var/log/containers
@@ -45,3 +89,38 @@ spec:
         - name: varlibdockercontainers
           hostPath:
             path: /var/lib/docker/containers
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: elastic-beat-filebeat-quickstart
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: elastic-beat-autodiscover-binding
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: elastic-beat-autodiscover
+subjects:
+- kind: ServiceAccount
+  name: elastic-beat-filebeat-quickstart
+  namespace: default
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: elastic-beat-autodiscover
+rules:
+- apiGroups:
+  - ""
+  resources:
+  - nodes
+  - namespaces
+  - events
+  - pods
+  verbs:
+  - get
+  - list
+  - watch
