--- a/k8s/app/ingress.yaml
+++ b/k8s/app/ingress.yaml
@@ -3,14 +3,15 @@ kind: Ingress
 metadata:
   name: nginx-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    kubernetes.io/ingress.class: nginx  # 指定ingress-controller，也可以在spec中通过ingressClassName指定
+    nginx.ingress.kubernetes.io/rewrite-target: /$2 # 重写路径，将/gateway和/agent重写为/
 spec:
   rules:
   - host: localhost
     http:
       paths:
-      - path: /gateway
-        pathType: Prefix
+      - path: /gateway(/|$)(.*)
+        pathType: ImplementationSpecific
         backend:
           service:
             name: app-gateway
